# transliterator-backend

./: CMakeLists.txt  Dockerfile  Jenkinsfile  TransliteratorBackend.pro  german_ukrainian.xml  libraries.qrc  main.cpp  pinyin_ukrainian.xml  spanish_ukrainian.xml  startup.sh  ukrainian_passport.xml  ukrainian_scientific.xml
server/: httpserver.cpp  httpserver.h  transliterationchat.cpp  transliterationchat.h  transliteratorfactory.cpp  transliteratorfactory.h  websocketserver.cpp  websocketserver.h
server/logger/: consolelogger.cpp  consolelogger.h  filelogger.h  logger.h
transliterator/LanguageStructures/: LanguagePair.h  LanguagePairList.h  SyllablePair.h  SyllablePairSet.h
transliterator/Parsers/: Words.h  XMLParser.h
transliterator/PerformanceBoosters/: LanguagePairIndex.h
transliterator/SyllableTree/: SyllableTree.h
transliterator/Transliterators/: GermanUkrainianTransliterator.h  PassportUkrainianTransliterator.h  PinyinUkrainianTransliterator.h  ScientificUkrainianTransliterator.h  SpanishUkrainianTransliterator.h  Transliterator.h  TransliteratorList.h
